--- a/dark-style.css
+++ b/dark-style.css
@@ -7,19 +7,19 @@
 }
 body{
     height: 100vh;
-    background: rgb(34,193,195);
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(162,0,255,1) 100%);
+    background: rgb(11,0,19);
+    background: linear-gradient(90deg, rgba(11,0,19,1) 0%, rgba(129,38,112,1) 50%, rgba(0,0,0,1) 100%);
 }
 .container{
     height: 100%;
     top: 50%;
     left: 50%;
-    background: white;
+    background: rgb(255, 255, 255);
     min-width: 50%;
     position: absolute;
     min-height: 100px;
     transform: translate(-50%,-50%);
-    background-color: #ffffff;
+    background-color: #242323;
     
 }
 /* New Task Input */
@@ -43,7 +43,7 @@ body{
 
 #newtask input:focus{
     outline: none;
-    border-color: #4e0c63;
+    border-color: #000000;
 }
 
 /* Button CSS */
@@ -70,7 +70,7 @@ body{
 
 .task button{
     background-color: #0a2ea4;
-    color: #ffffff;
+    color: #cacaca;
     border: none;
     cursor: pointer;
     outline: none;
@@ -85,7 +85,7 @@ body{
     border-radius: 10px;
     width: 100%;
     position: relative;
-    background-color: #e9e9e9;
+    background-color: #ffffff;
     padding: 30px 20px;
     margin-top: 10px;
 }
@@ -115,19 +115,20 @@ body{
 }
 .icons-container {
     display: flex;
-      
 }
 .header1 {
     font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     padding-top: 7px;
-    color: rgb(0, 0, 0);
+    color: rgb(255, 255, 255);
     font-size: 36px;
-   margin: auto;
+    margin:auto;
 }
 
 .mode {
-    border-radius: 100%;
+    background-color:#242323;
     border-style: none;
     margin: auto;
     cursor: pointer;
+    
+
 }
