--- a/style.css
+++ b/style.css
@@ -1,133 +1,134 @@
-*,
-*:before,
-*:after{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-body{
-    height: 100vh;
-    background: rgb(34,193,195);
-    background: linear-gradient(0deg, rgba(34,193,195,1) 0%, rgba(162,0,255,1) 100%);
-}
-.container{
-    height: 100%;
-    top: 50%;
-    left: 50%;
-    background: white;
-    min-width: 50%;
-    position: absolute;
-    min-height: 100px;
-    transform: translate(-50%,-50%);
-    background-color: #ffffff;
-    
-}
-/* New Task Input */
-#newtask{
-    position: relative;
-    padding: 30px 20px;
-   
-}
-#newtask input{
-    width: 75%;
-    height: 45px;
-    padding: 12px;
-    color: #111111;
-    font-weight: 500;
-    position: relative;
-    border-radius: 5px;
-    font-family: 'Poppins',sans-serif;
-    font-size: 15px;
-    border: 2px solid #d1d3d4;
+:root {
+  --dark: #374151;
+  --darker: #1f2937;
+  --darkest: #251f1f;
+  --light: #eee;
+  --pink: #ec4899;
+  --purple: #8b5cf6;
+  --gray: #6b7280;
 }
 
-#newtask input:focus{
-    outline: none;
-    border-color: #4e0c63;
+* {
+  box-sizing: border-box;
+  margin: 0;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-/* Button CSS */
-#newtask button{
-    position: relative;
-    float: right;
-    font-weight: 500;
-    font-size: 16px;
-    background: rgb(34,193,195);
-    background: rgb(100,63,121);
-    background: linear-gradient(0deg, rgba(100,63,121,1) 50%, rgba(162,0,255,1) 100%);
-    border: none;
-    color: #ffffff;
-    cursor: pointer;
-    outline: none;
-    width: 20%;
-    height: 45px;
-    border-radius: 5px;
-    font-family: 'Poppins',sans-serif;
+body {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  background: var(--dark);
+  color: white;
 }
 
-
-
-
-.task button{
-    background-color: #0a2ea4;
-    color: #ffffff;
-    border: none;
-    cursor: pointer;
-    outline: none;
-    height: 100%;
-    width: 40px;
-    border-radius: 5px;
+header {
+  padding: 2rem 1rem;
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
 }
 
-/* Tasks */
-
-#tasks{
-    border-radius: 10px;
-    width: 100%;
-    position: relative;
-    background-color: #e9e9e9;
-    padding: 30px 20px;
-    margin-top: 10px;
+header h1 {
+  font-size: 2.5rem;
+  font-weight: 300;
+  margin-bottom: 1rem;
+  color: var(--gray);
+}
+#new-task-form {
+  display: flex;
 }
 
-.task{
-    border-radius: 5px;
-    align-items: center;
-    justify-content: space-between;
-    border: 1px solid #939697;
-    cursor: pointer;
-    background-color: #ffffff;
-    height: 50px;
-    margin-bottom: 8px;
-    padding: 5px 10px;
-    display: flex;
-}
-.task span{
-    font-family: 'Poppins',sans-serif;
-    font-size: 15px;
-    font-weight: 400;
+input,
+button {
+  appearance: none;
+  border: none;
+  outline: none;
+  background: none;
 }
 
-/* DARK MODE AND LANGUAGE ICON */
-.moon-png, .turkey-png {
-    height: 50px;
-    width: 50px;
+#new-task-input {
+  flex: 1 1 0%;
+  background-color: var(--darker);
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-right: 1rem;
+  color: var(--light);
+  font-size: 1.25rem;
 }
-.icons-container {
-    display: flex;
-      
-}
-.header1 {
-    font-family:system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    padding-top: 7px;
-    color: rgb(0, 0, 0);
-    font-size: 36px;
-   margin: auto;
+#new-task-input::placeholder {
+  color: var(--gray);
 }
 
-.mode {
-    border-radius: 100%;
-    border-style: none;
-    margin: auto;
-    cursor: pointer;
+#new-task-submit {
+  color: var(--pink);
+  font-size: 1.25rem;
+  font-weight: 700;
+  cursor: pointer;
+  background: white;
+  border-radius: 20%;
+}
+
+#new-task-submit:hover {
+  opacity: 0.9;
+}
+
+#new-task-submit:active {
+  opacity: 0.6;
+}
+
+main {
+  flex: 1 1 0%;
+
+  max-width: 800px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.task-list h2 {
+  font-size: 1.5rem;
+}
+
+#tasks .task {
+  display: flex;
+  justify-content: space-between;
+  background-color: var(--darkest);
+  padding: 1rem;
+  border-radius: 1rem;
+  margin-bottom: 1rem;
+}
+
+#tasks .task .content .text {
+  color: var(--light);
+  font-size: 1.125rem;
+  width: 100%;
+  display: block;
+  transition: 0.4s;
+}
+
+#tasks .task .content .text::not(:read-only) {
+  color: pink;
+}
+
+#tasks .task .actions {
+  display: flex;
+  margin: 0 -0.5rem;
+}
+
+.task .actions button {
+        cursor: pointer;
+        margin: 0 0.5rem;
+        font-size: 1.125rem;
+        font-weight: 700;
+        text-transform: uppercase;
+        transition: .4s;
+}
+
+.task .actions .edit {
+        color: var(--pink);
+}
+
+.task .actions .delete {
+        color: red;
 }
