--- a/style.css
+++ b/style.css
@@ -1,134 +1,8 @@
-:root {
-  --dark: #374151;
-  --darker: #1f2937;
-  --darkest: #251f1f;
-  --light: #eee;
-  --pink: #ec4899;
-  --purple: #8b5cf6;
-  --gray: #6b7280;
+.plus {
+  cursor: pointer !important;
 }
 
-* {
-  box-sizing: border-box;
-  margin: 0;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
-    Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-body {
-  display: flex;
-  flex-direction: column;
-  min-height: 100vh;
-  background: var(--dark);
-  color: white;
-}
-
-header {
-  padding: 2rem 1rem;
-  max-width: 800px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-header h1 {
-  font-size: 2.5rem;
-  font-weight: 300;
-  margin-bottom: 1rem;
-  color: var(--gray);
-}
-#new-task-form {
-  display: flex;
-}
-
-input,
-button {
-  appearance: none;
+.delete {
   border: none;
-  outline: none;
-  background: none;
-}
-
-#new-task-input {
-  flex: 1 1 0%;
-  background-color: var(--darker);
-  padding: 1rem;
-  border-radius: 1rem;
-  margin-right: 1rem;
-  color: var(--light);
-  font-size: 1.25rem;
-}
-#new-task-input::placeholder {
-  color: var(--gray);
-}
-
-#new-task-submit {
-  color: var(--pink);
-  font-size: 1.25rem;
-  font-weight: 700;
-  cursor: pointer;
-  background: white;
-  border-radius: 20%;
-}
-
-#new-task-submit:hover {
-  opacity: 0.9;
-}
-
-#new-task-submit:active {
-  opacity: 0.6;
-}
-
-main {
-  flex: 1 1 0%;
-
-  max-width: 800px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-.task-list h2 {
-  font-size: 1.5rem;
-}
-
-#tasks .task {
-  display: flex;
-  justify-content: space-between;
-  background-color: var(--darkest);
-  padding: 1rem;
-  border-radius: 1rem;
-  margin-bottom: 1rem;
-}
-
-#tasks .task .content .text {
-  color: var(--light);
-  font-size: 1.125rem;
-  width: 100%;
-  display: block;
-  transition: 0.4s;
-}
-
-#tasks .task .content .text::not(:read-only) {
-  color: pink;
-}
-
-#tasks .task .actions {
-  display: flex;
-  margin: 0 -0.5rem;
-}
-
-.task .actions button {
-        cursor: pointer;
-        margin: 0 0.5rem;
-        font-size: 1.125rem;
-        font-weight: 700;
-        text-transform: uppercase;
-        transition: .4s;
-}
-
-.task .actions .edit {
-        color: var(--pink);
-}
-
-.task .actions .delete {
-        color: red;
+  border-radius: 100%;
 }
